--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/prompt_room_name"
-        android:inputType="text"
+        android:inputType="textShortMessage"
         android:maxLines="1"
         android:singleLine="true" />
 
