Work by Malca Separate title and question Friendly Time Display

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,30 @@
         android:layout_above="@+id/listFooter"
         android:transcriptMode="alwaysScroll" />
 
+    <LinearLayout
+        android:id="@+id/listAboutFooter"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/listFooter"
+        android:orientation="horizontal"
+        >
+
+        <TextView
+            android:id="@+id/Titlelabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Title" />
+
+        <EditText
+            android:id="@+id/TitleInput"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:inputType="textShortMessage"
+            android:lines="1"
+            android:singleLine="true" />
+    </LinearLayout>
+
 
     <LinearLayout
         android:id="@+id/listFooter"
@@ -32,14 +56,22 @@
         android:layout_alignParentBottom="true"
         android:orientation="horizontal">
 
+        <TextView
+            android:id="@+id/Msglabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Message" />
+
         <EditText
             android:id="@+id/messageInput"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:inputType="textShortMessage"
-            android:lines="1"
-            android:singleLine="true" />
+            android:lines="2"
+            android:maxLines="10"
+            android:inputType="textMultiLine|textLongMessage"
+            android:gravity="top"
+            android:singleLine="false"/>
 
         <ImageButton
             android:id="@+id/sendButton"
