--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/close"
-        android:layout_above="@+id/listFooter"
+        android:layout_above="@+id/listAboutFooter"
         android:transcriptMode="alwaysScroll" />
 
     <LinearLayout
@@ -39,13 +39,19 @@
             android:text="Title" />
 
         <EditText
-            android:id="@+id/TitleInput"
+            android:id="@+id/titleInput"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:inputType="textShortMessage"
             android:lines="1"
             android:singleLine="true" />
+
+        <ImageButton
+            android:id="@+id/sendButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/ic_menu_send" />
     </LinearLayout>
 
 
@@ -73,11 +79,7 @@
             android:gravity="top"
             android:singleLine="false"/>
 
-        <ImageButton
-            android:id="@+id/sendButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_menu_send" />
+
     </LinearLayout>
 
 
