--- a/app/src/main/res/layout/question.xml
+++ b/app/src/main/res/layout/question.xml
@@ -21,11 +21,12 @@
         android:id="@+id/head_desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp" />
+        android:layout_marginLeft="5dp"
+        android:autoLink="web" />
 
     <TextView
         android:id="@+id/timedisplay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp" />
+        android:layout_marginLeft="5dp"/>
 </LinearLayout>
