--- a/app/src/main/res/layout/question.xml
+++ b/app/src/main/res/layout/question.xml
@@ -1,32 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/echo"
-        android:drawableLeft="@drawable/like24"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/dislike"
-        android:drawableLeft="@drawable/dislike"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:id="@+id/topic"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+
+        <TextView
+            android:id="@+id/isNew"
+            android:textStyle="bold"
+            android:text="NEW"
+            android:padding="3dp"
+            android:background="#FFFF0000"
+            android:textColor="@android:color/white"
+            android:textSize="8dp"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:autoLink="web" />
+
+        <TextView
+            android:id="@+id/head_desc"
+            android:textStyle="bold"
+            android:textSize="18dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:autoLink="web" />
+    </LinearLayout>
 
     <TextView
-        android:id="@+id/head_desc"
+        android:id="@+id/onlymsg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
-        android:autoLink="web" />
+        android:layout_below="@+id/topic"
+        android:autoLink="web"
+        android:gravity="top"
+        android:singleLine="false"
+        android:isScrollContainer="true"
+        />
 
-    <TextView
-        android:id="@+id/timedisplay"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/info"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"/>
-</LinearLayout>
+        android:layout_below="@+id/onlymsg"
+        android:orientation="horizontal"
+        >
+        <Button
+            android:id="@+id/echo"
+            android:drawableLeft="@drawable/like24"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/dislike"
+            android:drawableLeft="@drawable/dislike"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/timedisplay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"/>
+    </LinearLayout>
+
+</RelativeLayout>
