**This version is also for instructor and mentor reference** New changes: 1. Different states of button (likebutton.xml, dislikebutton.xml, colors.xml) Problems: 1. still debugging the like, dislike and unlike features

--- a/app/src/main/res/layout/question.xml
+++ b/app/src/main/res/layout/question.xml
@@ -57,14 +57,17 @@
         android:orientation="horizontal"
         >
         <Button
-            android:id="@+id/echo"
+            android:id="@+id/like"
             android:drawableLeft="@drawable/like24"
+            android:background="@drawable/likebutton"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            />
 
         <Button
             android:id="@+id/dislike"
             android:drawableLeft="@drawable/dislike"
+            android:background="@drawable/likebutton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
