New changes: 1.like/dislike img edited 2.foul language filter

--- a/app/src/main/res/layout/question.xml
+++ b/app/src/main/res/layout/question.xml
@@ -53,9 +53,10 @@
         android:id="@+id/info"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/onlymsg"
         android:orientation="horizontal"
-        >
+        android:layout_below="@+id/onlymsg"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
         <Button
             android:id="@+id/like"
             android:drawableLeft="@drawable/like24"
