--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
+    android:layout_centerHorizontal="true"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -10,15 +10,16 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="hk.ust.cse.hunkim.questionroom.JoinActivity">
 
-    <!--<ImageView-->
-        <!--android:id="@+id/logo"-->
-        <!--android:gravity="center_horizontal"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:src="@drawable/room_icon"-->
-        <!--android:layout_alignParentTop = "true"-->
-        <!--android:singleLine="true"-->
-        <!--/>-->
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/room_icon"
+            android:layout_alignParentTop = "true"
+            android:singleLine="true"
+        />
+
 
     <AutoCompleteTextView
         android:id="@+id/room_name"
@@ -28,14 +29,14 @@
         android:hint="@string/prompt_room_name"
         android:gravity="center_horizontal"
         android:inputType="textShortMessage"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="26dp"
         android:maxLines="1"
         android:singleLine="true" />
 
     <Button
         android:id="@+id/join_button"
         style="?android:textAppearanceSmall"
-        android:gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/room_name"
@@ -52,7 +53,12 @@
         android:layout_marginTop="36dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Room Suggested:" />
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:gravity="center"
+        android:layout_centerInParent="true"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        android:text="POPULAR ROOM" />
 
 
     <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -62,6 +68,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/suggested"
+        android:layout_centerInParent="true"
+        android:gravity="center"
         android:layout_alignParentBottom="true"
         android:columnCount="2"
         android:rowCount="2"
@@ -85,6 +93,7 @@
             android:onClick="suggestJoin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_columnSpan="1"
             android:autoLink="web" />
 
         <Button
