--- a/app/src/main/res/layout/question.xml
+++ b/app/src/main/res/layout/question.xml
@@ -5,13 +5,12 @@
     android:layout_height="fill_parent"
     android:orientation="horizontal">
 
-
     <LinearLayout
         android:id="@+id/topic"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        >
+        android:layout_alignParentTop="true">
 
         <TextView
             android:id="@+id/isNew"
@@ -20,7 +19,7 @@
             android:padding="3dp"
             android:background="#FFFF0000"
             android:textColor="@android:color/white"
-            android:textSize="8dp"
+            android:textSize="10dp"
             android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -35,28 +34,43 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:autoLink="web" />
+
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/onlymsg"
-        android:layout_width="wrap_content"
+
+    <LinearLayout
+        android:id="@+id/topic2"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
+        android:orientation="horizontal"
         android:layout_below="@+id/topic"
-        android:autoLink="web"
-        android:gravity="top"
-        android:singleLine="false"
-        android:isScrollContainer="true"
-        />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <TextView
+            android:id="@+id/onlymsg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_below="@+id/topic"
+            android:autoLink="web"
+            android:gravity="top"
+            android:singleLine="false"
+            android:isScrollContainer="true"
+            android:textSize="15dp" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/info"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_below="@+id/onlymsg"
+        android:weightSum="1"
+        android:layout_below="@+id/topic2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
+
         <Button
             android:id="@+id/like"
             android:drawableLeft="@drawable/like24"
@@ -72,11 +86,39 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/timedisplay"
+        <Button
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"/>
+            android:layout_height="30dp"
+            android:id="@+id/showall"
+            android:textSize="11dp"
+            android:hint="Read more"
+            android:textColor="#48ff39"
+            android:textStyle="italic"
+            android:layout_above="@+id/info"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/topic3"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/timedisplay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.18"
+        android:layout_below="@+id/info"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 
 </RelativeLayout>
