--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -63,7 +63,7 @@
         android:layout_centerInParent="true"
         android:textSize="18dp"
         android:textStyle="bold"
-        android:text="POPULAR ROOM" />
+        android:text="ROOM VISITED" />
 
 
     <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
